--- a/package.json
+++ b/package.json
@@ -9,15 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.5",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "ffmpeg": "^0.0.4",
-    "fluent-ffmpeg": "^2.1.3",
-    "googleapis": "^142.0.0",
-    "yt-dlp-exec": "^1.0.2",
-    "yt-dlp-wrap": "^2.3.12",
-    "ytdl-core": "^4.11.5"
+    "yt-dlp-exec": "^1.0.2"
   }
 }
